# firefox-session-store-manager

./: .gitignore  Cargo.toml  README.md  build.rs
resources/: resources.gresource.xml  window.ui
src/: main.rs
src/main_window/: imp.rs  mod.rs
