[package]
name = "firefox-session-store-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.3.1", package = "libadwaita", features = ["v1_3"] }
const_format = { version = "0.2.30", features = ["rust_1_64"] }
gtk = { version = "0.6.2", package = "gtk4", features = ["v4_10"] }

[build-dependencies]
glib-build-tools = "0.17.0"
